# nocc_fullstack_rootstock_supabase_v2

./: README.md  pyproject.toml
src/nocc_fullstack_rootstock_supabase/: agents.py  crew.py  main.py  tasks.py
src/nocc_fullstack_rootstock_supabase/utils/: frontend_helpers.py  rootstock_helpers.py
tests/: test_crew.py
